hide job's place

--- a/app/views/empleados/show.html.erb
+++ b/app/views/empleados/show.html.erb
@@ -101,26 +101,26 @@
 <button id="ubicame">mi ubicacion</button>
 <input type="file" value="upload" id="fileButton"/>
 
-
-<h2>Add a lugar de trabajo:</h2>
-<%= form_for([@empleado, @empleado.lugar_de_trabajos.build]) do |f| %>
-  <p>
-    <%= f.label :zona %><br>
-    <%= f.text_field :zona%>
-  </p>
-  <p>
-    <%= f.label :latitud %><br>
-    <%= f.text_field :latitud%>
-  </p>
-  <p>
-    <%= f.label :longitud %><br>
-    <%= f.file_field :longitud %>
-  </p>
-  <p>
+<% if session[:type_user]== 'admin'  %>
+  <h2>Add a lugar de trabajo:</h2>
+  <%= form_for([@empleado, @empleado.lugar_de_trabajos.build]) do |f| %>
+    <p>
+      <%= f.label :zona %><br>
+      <%= f.text_field :zona%>
+    </p>
+    <p>
+      <%= f.label :latitud %><br>
+      <%= f.text_field :latitud%>
+    </p>
+    <p>
+      <%= f.label :longitud %><br>
+      <%= f.file_field :longitud %>
+    </p>
+    <p>
     <%= f.submit %>
-  </p>
+    </p>
+    <% end %>
 <% end %>
-
 
 
 <%= link_to 'Edit', edit_empleado_path(@empleado) %> |
