--- a/app/views/empleados/show.html.erb
+++ b/app/views/empleados/show.html.erb
@@ -104,7 +104,7 @@
 <% end %>
 
 <% if user_is_admin?  %>
-  <h2>Add a lugar de trabajo:</h2>
+  <h3>Asignar lugar de trabajo:</h3>
   <%= form_for([@empleado, @empleado.lugar_de_trabajos.build]) do |f| %>
     <p>
       <%= f.label :zona %><br>
