update fields in form asignar lugar de trabajo

--- a/app/views/empleados/show.html.erb
+++ b/app/views/empleados/show.html.erb
@@ -111,12 +111,12 @@
       <%= f.text_field :zona%>
     </p>
     <p>
-      <%= f.label :latitud %><br>
-      <%= f.text_field :latitud%>
+      <%= f.label :direccion %><br>
+      <%= f.text_field :direccion%>
     </p>
     <p>
-      <%= f.label :longitud %><br>
-      <%= f.file_field :longitud %>
+      <%= f.label :descripcion %><br>
+      <%= f.file_field :descripcion %>
     </p>
     <p>
     <%= f.submit %>
