--- a/app/views/empleados/show.html.erb
+++ b/app/views/empleados/show.html.erb
@@ -111,12 +111,20 @@
       <%= f.text_field :zona%>
     </p>
     <p>
+      <%= f.label :latitud %><br>
+      <%= f.text_field :latitud%>
+    </p>
+    <p>
+      <%= f.label :longitud %><br>
+      <%= f.text_field :longitud %>
+    </p>
+    <p>
       <%= f.label :direccion %><br>
-      <%= f.text_field :direccion%>
+      <%= f.text_field :direccion %>
     </p>
     <p>
       <%= f.label :descripcion %><br>
-      <%= f.file_field :descripcion %>
+      <%= f.text_field :descripcion %>
     </p>
     <p>
     <%= f.submit %>
