--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,7 @@
             <li style="padding-top: 15px;"><a  href=" /users" class="waves-effect waves-light btn">user</a></li>
           <% end %>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/empleados">Empleados</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/teachers" >Lugar de trabajos</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/Clientes" >Clientes</a></li>
+          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/teachers" >Clientes</a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/Ubicaciones" >Ubicaciones</a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="https://maps.google.com" target="_blank">Google Maps</a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/login">Login </a></li>
