--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,12 +31,12 @@
           <% if user_is_admin? %>
             <li style="padding-top: 15px;"><a  href=" /users" class="waves-effect waves-light btn">user</a></li>
           <% end %>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/empleados">Empleados</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/teachers" >Clientes</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/Ubicaciones" >Ubicaciones</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="https://maps.google.com" target="_blank">Google Maps</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/login">Login </a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/logout">Logout </a></li>
+          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/empleados" data-turbolinks="false">Empleados</a></li>
+          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/teachers" data-turbolinks="false" >Clientes</a></li>
+          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/Ubicaciones" data-turbolinks="false" >Ubicaciones</a></li>
+          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="https://maps.google.com" data-turbolinks="false" target="_blank">Google Maps</a></li>
+          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/login" data-turbolinks="false">Login </a></li>
+          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/logout" data-turbolinks="false">Logout </a></li>
         </ul>
       </div>
     </nav>
@@ -48,6 +48,8 @@
     <li><a href="/cursos"  data-turbolinks="false">Capturar Datos</a></li>
     <li><a href="/inscripcions" data-turbolinks="false">Confirmar datos</a></li>
     <li><a href="/users/login" data-turbolinks="false"> login </a></li>
+    <li style="padding-top: 15px;">
+      <a class="waves-effect waves-light btn" href="/users/logout" data-turbolinks="false">Logout </a></li>
   </ul>
 
   <body>
