--- a/app/views/empleados/show.html.erb
+++ b/app/views/empleados/show.html.erb
@@ -72,7 +72,7 @@
     </p>
     <p>
       <strong>Imgagen:</strong>
-      <img src= <%= rastreo.image.to_s %>>
+      <img style="height: 20px" src= <%= rastreo.image.to_s %> >
     </p>
   <% end %>
 
