--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,18 +35,19 @@
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/teachers" data-turbolinks="false" >Clientes</a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/Ubicaciones" data-turbolinks="false" >Ubicaciones</a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="https://maps.google.com" data-turbolinks="false" target="_blank">Google Maps</a></li>
+          <li><a class="waves-effect waves-light btn" href="/users" data-turbolinks="false">nuevo usuario </a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/login" data-turbolinks="false">Login </a></li>
+          <li style="padding-top: 15px;">
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/logout" data-turbolinks="false">Logout </a></li>
         </ul>
       </div>
     </nav>
   </div>
   <ul class="sidenav " id="mobile-demo">
-    <li><a href="/infrastructures" data-turbolinks="false">Jefe</a></li>
-    <li><a href="/empleados"  data-turbolinks="false">Empleado</a></li>
-    <li><a href="/estudiantes"  data-turbolinks="false">Area Trabajo</a></li>
-    <li><a href="/cursos"  data-turbolinks="false">Capturar Datos</a></li>
-    <li><a href="/inscripcions" data-turbolinks="false">Confirmar datos</a></li>
+    <li><a href="/teachers" data-turbolinks="false">Clientes</a></li>
+    <li><a href="/empleados"  data-turbolinks="false">Empleados</a></li>
+    <li><a href="/"  data-turbolinks="false">Area Trabajo</a></li>
+    <li><a href="/"  data-turbolinks="false">Capturar Datos</a></li>
     <li><a href="/users/login" data-turbolinks="false"> login </a></li>
     <li style="padding-top: 15px;">
       <a class="waves-effect waves-light btn" href="/users/logout" data-turbolinks="false">Logout </a></li>
