--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/teachers" data-turbolinks="false" >Clientes</a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/Ubicaciones" data-turbolinks="false" >Ubicaciones</a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="https://maps.google.com" data-turbolinks="false" target="_blank">Google Maps</a></li>
-          <li><a class="waves-effect waves-light btn" href="/users" data-turbolinks="false">nuevo usuario </a></li>
+          <li   style="padding-top: 15px;" ><a class="waves-effect waves-light btn" href="/users" data-turbolinks="false">nuevo usuario </a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/login" data-turbolinks="false">Login </a></li>
           <li style="padding-top: 15px;">
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/logout" data-turbolinks="false">Logout </a></li>
