create route to reportes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <a href="#!" class="brand-logo">Seguimiento</a>
         <a data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li style="padding-top: 15px;"><a class="waves-effect waves-light btn">Reporte</a></li>
+          <li style="padding-top: 15px;"><a class="waves-effect waves-light btn"  href=" /reportes/index" >Reporte</a></li>
           <% if user_is_admin? %>
             <li style="padding-top: 15px;"><a  href=" /users" class="waves-effect waves-light btn">user</a></li>
           <% end %>
