empleoyes update view

--- a/app/views/reportes/index.html.erb
+++ b/app/views/reportes/index.html.erb
@@ -3,7 +3,7 @@
 <h1>Empleados</h1>
   <% @empleados.each do |empleado| %>
   <h3 style="text-align: center">
-    <strong>Nombre Empleado:</strong>
+    <strong>Empleado:</strong>
     <%= empleado.nombre %>
   </h3>
       <% empleado.rastreos.each do |empleado_rastreo| %>
