--- a/app/views/empleados/show.html.erb
+++ b/app/views/empleados/show.html.erb
@@ -92,6 +92,10 @@
       <%= f.text_field :image %>
     </p>
     <p>
+      <%= f.label :fecha %><br>
+      <%= f.text_field :fecha , value: Time.now,id: :rastreo_fecha, :readonly => true %>
+    </p>
+    <p>
       <%= f.submit %>
     </p>
   <% end %>
