show fecha in reports

--- a/app/views/reportes/index.html.erb
+++ b/app/views/reportes/index.html.erb
@@ -8,6 +8,10 @@
   </h3>
       <% empleado.rastreos.each do |empleado_rastreo| %>
         <p>
+          <strong>Fecha y Hora:</strong>
+          <%= empleado_rastreo.fecha %>
+        </p>
+        <p>
           <strong>Latitud:</strong>
           <%= empleado_rastreo.latitud %>
         </p>
