go to google maps

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/empleados" data-turbolinks="false">Empleados</a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/teachers" data-turbolinks="false" >Clientes</a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/lugar_de_trabajos/google_maps" data-turbolinks="false" >Mis ubicaciones</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="https:/maps.google.com" data-turbolinks="false" target="_blank">Google Maps</a></li>
+          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="maps.google.com" data-turbolinks="false" target="_blank">Google Maps</a></li>
           <li   style="padding-top: 15px;" ><a class="waves-effect waves-light btn" href="/users" data-turbolinks="false">nuevo usuario </a></li>
           <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/login" data-turbolinks="false">Login </a></li>
           <li style="padding-top: 15px;">
