--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,47 +20,25 @@
     <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
     <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
   </head>
-
-  <div class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper blue darken-2">
-        <a href="#!" class="brand-logo">Seguimiento</a>
-        <a data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-          <li style="padding-top: 15px;"><a class="waves-effect waves-light btn"  href=" /reportes/index" >Reporte</a></li>
-          <% if user_is_admin? %>
-            <li style="padding-top: 15px;"><a  href=" /users" class="waves-effect waves-light btn">user</a></li>
-          <% end %>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/empleados" data-turbolinks="false">Empleados</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/teachers" data-turbolinks="false" >Clientes</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/lugar_de_trabajos/google_maps" data-turbolinks="false" >Mis ubicaciones</a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="https://www.google.com/maps" data-turbolinks="false" target="_blank">Google Maps</a></li>
-          <li   style="padding-top: 15px;" ><a class="waves-effect waves-light btn" href="/users" data-turbolinks="false">nuevo usuario </a></li>
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/login" data-turbolinks="false">Login </a></li>
-          <li style="padding-top: 15px;">
-          <li  style="padding-top: 15px;" ><a class="waves-effect waves-light btn"  href="/users/logout" data-turbolinks="false">Logout </a></li>
+  <body>
+    <header>
+      <div class="container">
+        <ul id="nav-mobile" class="sidenav sidenav-fixed" style="transform: translateX(0px);">
+          <li><a href="#!">First Sidebar Link</a></li>
+          <li><a href="#!">Second Sidebar Link</a></li>
         </ul>
       </div>
-    </nav>
-  </div>
-  <ul class="sidenav " id="mobile-demo">
-    <li><a href="/teachers" data-turbolinks="false">Clientes</a></li>
-    <li><a href="/empleados"  data-turbolinks="false">Empleados</a></li>
-    <li><a href="/"  data-turbolinks="false">Area Trabajo</a></li>
-    <li><a href="/"  data-turbolinks="false">Capturar Datos</a></li>
-    <li><a href="/users/login" data-turbolinks="false"> login </a></li>
-    <li style="padding-top: 15px;">
-      <a class="waves-effect waves-light btn" href="/users/logout" data-turbolinks="false">Logout </a></li>
-  </ul>
-
-  <body>
-    <div class="container">
-      <%= yield %>
-      <div class="fixed-action-btn">
-        <a class="btn-floating btn-large red">
-          <i class="large material-icons">mode_edit</i>
-        </a>
+    </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col s12 m8 offset-m1 xl7 offset-xl1">
+            <%= yield %>
+          </div>
+        </div>
       </div>
-    </div>
+    </main>
+
+
   </body>
 </html>
